Crash when trying to render spotlight halos #44322

Closed
opened 2015-04-09 15:25:21 +02:00 by Joshua Leung · 8 comments
Member

System Information
Windows 8.1, 64-bit
scons + mingw64 own build

Blender Version
Broken: 441f68e2b0
Worked: 2.74 Official Release

Short description of error
The Blender Internal renderer crashes when rendering (F12) scenes containing spotlight halos. However, there are no problems when using the viewport render preview (shift-z), with the halos getting shown as expected.

Exact steps for others to reproduce the error
Using 275-halo_bug.blend

  • Hit F12 to render => Crash
  • Hit Shift-Z in the 3D view => No crash, the scene gets rendered normally.

This file was created by simply taking the default scene, changing the default lamp to a spotlight, and enabling halos for that. The shadowing options on the spotlight have no effect on whether this crashes or not.

**System Information** Windows 8.1, 64-bit scons + mingw64 own build **Blender Version** Broken: 441f68e2b08c7b55e69128ebf715e4bae2ac29d5 Worked: 2.74 Official Release **Short description of error** The Blender Internal renderer crashes when rendering (F12) scenes containing spotlight halos. However, there are no problems when using the viewport render preview (shift-z), with the halos getting shown as expected. **Exact steps for others to reproduce the error** Using [275-halo_bug.blend](https://archive.blender.org/developer/F160136/275-halo_bug.blend) * Hit F12 to render => Crash * Hit Shift-Z in the 3D view => No crash, the scene gets rendered normally. This file was created by simply taking the default scene, changing the default lamp to a spotlight, and enabling halos for that. The shadowing options on the spotlight have no effect on whether this crashes or not.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @JoshuaLeung

Added subscriber: @JoshuaLeung

Added subscriber: @mont29

Added subscriber: @mont29

Can confirm the crash, could be my fault, will check.

Can confirm the crash, could be my fault, will check.
Bastien Montagne self-assigned this 2015-04-09 16:05:56 +02:00

Mmmmh… no, this is not 89530f1486 at least…

Mmmmh… no, this is not 89530f1486 at least…

This issue was referenced by b30a2fe3f4

This issue was referenced by b30a2fe3f4e0414483c8408a080fd56bc1ca5958

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit b30a2fe3f4.

Closed by commit b30a2fe3f4.
Sign in to join this conversation.
3 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#44322
No description provided.